SERVER-49232 improving failCommand logging